src/bindings/bindings_debug.rs

#[test]
fn bindgen_test_layout_Clay_ScrollElementConfig() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_ScrollElementConfig> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_ScrollElementConfig>(),
        2usize,
        concat!("Size of: ", stringify!(Clay_ScrollElementConfig))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_ScrollElementConfig>(),
        1usize,
        concat!("Alignment of ", stringify!(Clay_ScrollElementConfig))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).horizontal) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ScrollElementConfig),
            "::",
            stringify!(horizontal)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).vertical) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ScrollElementConfig),
            "::",
            stringify!(vertical)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_Border {
    pub width: u32,
    pub color: Clay_Color,
}
#[test]
fn bindgen_test_layout_Clay_Border() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_Border> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_Border>(),
        20usize,
        concat!("Size of: ", stringify!(Clay_Border))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_Border>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_Border))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).width) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Border),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).color) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Border),
            "::",
            stringify!(color)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_BorderElementConfig {
    pub left: Clay_Border,
    pub right: Clay_Border,
    pub top: Clay_Border,
    pub bottom: Clay_Border,
    pub betweenChildren: Clay_Border,
    pub cornerRadius: Clay_CornerRadius,
}
#[test]
fn bindgen_test_layout_Clay_BorderElementConfig() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_BorderElementConfig> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_BorderElementConfig>(),
        116usize,
        concat!("Size of: ", stringify!(Clay_BorderElementConfig))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_BorderElementConfig>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_BorderElementConfig))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).left) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_BorderElementConfig),
            "::",
            stringify!(left)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).right) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_BorderElementConfig),
            "::",
            stringify!(right)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).top) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_BorderElementConfig),
            "::",
            stringify!(top)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).bottom) as usize - ptr as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_BorderElementConfig),
            "::",
            stringify!(bottom)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).betweenChildren) as usize - ptr as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_BorderElementConfig),
            "::",
            stringify!(betweenChildren)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cornerRadius) as usize - ptr as usize },
        100usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_BorderElementConfig),
            "::",
            stringify!(cornerRadius)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union Clay_ElementConfigUnion {
    pub rectangleElementConfig: *mut Clay_RectangleElementConfig,
    pub textElementConfig: *mut Clay_TextElementConfig,
    pub imageElementConfig: *mut Clay_ImageElementConfig,
    pub floatingElementConfig: *mut Clay_FloatingElementConfig,
    pub customElementConfig: *mut Clay_CustomElementConfig,
    pub scrollElementConfig: *mut Clay_ScrollElementConfig,
    pub borderElementConfig: *mut Clay_BorderElementConfig,
}
#[test]
fn bindgen_test_layout_Clay_ElementConfigUnion() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_ElementConfigUnion> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_ElementConfigUnion>(),
        8usize,
        concat!("Size of: ", stringify!(Clay_ElementConfigUnion))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_ElementConfigUnion>(),
        8usize,
        concat!("Alignment of ", stringify!(Clay_ElementConfigUnion))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).rectangleElementConfig) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementConfigUnion),
            "::",
            stringify!(rectangleElementConfig)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).textElementConfig) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementConfigUnion),
            "::",
            stringify!(textElementConfig)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).imageElementConfig) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementConfigUnion),
            "::",
            stringify!(imageElementConfig)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).floatingElementConfig) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementConfigUnion),
            "::",
            stringify!(floatingElementConfig)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).customElementConfig) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementConfigUnion),
            "::",
            stringify!(customElementConfig)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).scrollElementConfig) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementConfigUnion),
            "::",
            stringify!(scrollElementConfig)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).borderElementConfig) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementConfigUnion),
            "::",
            stringify!(borderElementConfig)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_ElementConfig {
    pub type_: Clay__ElementConfigType,
    pub config: Clay_ElementConfigUnion,
}
#[test]
fn bindgen_test_layout_Clay_ElementConfig() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_ElementConfig> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_ElementConfig>(),
        16usize,
        concat!("Size of: ", stringify!(Clay_ElementConfig))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_ElementConfig>(),
        8usize,
        concat!("Alignment of ", stringify!(Clay_ElementConfig))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementConfig),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).config) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementConfig),
            "::",
            stringify!(config)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ScrollContainerData {
    pub scrollPosition: *mut Clay_Vector2,
    pub scrollContainerDimensions: Clay_Dimensions,
    pub contentDimensions: Clay_Dimensions,
    pub config: Clay_ScrollElementConfig,
    pub found: bool,
}
#[test]
fn bindgen_test_layout_Clay_ScrollContainerData() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_ScrollContainerData> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_ScrollContainerData>(),
        32usize,
        concat!("Size of: ", stringify!(Clay_ScrollContainerData))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_ScrollContainerData>(),
        8usize,
        concat!("Alignment of ", stringify!(Clay_ScrollContainerData))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).scrollPosition) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ScrollContainerData),
            "::",
            stringify!(scrollPosition)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).scrollContainerDimensions) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ScrollContainerData),
            "::",
            stringify!(scrollContainerDimensions)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).contentDimensions) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ScrollContainerData),
            "::",
            stringify!(contentDimensions)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).config) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ScrollContainerData),
            "::",
            stringify!(config)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).found) as usize - ptr as usize },
        26usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ScrollContainerData),
            "::",
            stringify!(found)
        )
    );
}
